--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0621.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0621.html
@@ -371,9 +371,9 @@
             <ins class="alt" title="nlp 1.00">πρόσωπα</ins>
           </span>
         </span>
-        <span id="w_69" class="ocr_word" title="bbox 1505 519 1830 570" lang="grc">
+        <span id="w_69_0" class="ocr_word" title="bbox 1505 519 1830 570">
           <span class="alternatives">
-            <ins title="nlp 2.00">πολυπραγμονεἶν</ins>
+            <ins class="alt" title="nlp 2.00">πολυπραγμονεῖν</ins>
           </span>
         </span>
       </span>
@@ -555,7 +555,7 @@
         </span>
         <span id="w_102_0" class="ocr_word" title="bbox 238 869 291 906">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἤ</ins>
+            <ins title="nlp 2.00">ἢ</ins>
           </span>
         </span>
         <span id="w_102_1" class="ocr_word" title="bbox 238 869 291 906">
@@ -630,9 +630,14 @@
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
-        <span id="w_116" class="ocr_word" title="bbox 951 937 970 961" lang="grc">
+        <span id="w_116_0" class="ocr_word" title="bbox 951 937 970 961">
           <span class="alternatives">
-            <ins title="nlp 2.00">ε&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ε&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_116_1" class="ocr_word" title="bbox 951 937 970 961">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_117" class="ocr_word" title="bbox 1002 922 1093 961" lang="grc">
@@ -658,11 +663,6 @@
         <span id="w_121" class="ocr_word" title="bbox 1472 924 1598 976" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λόγου,</ins>
-          </span>
-        </span>
-        <span id="w_122" class="ocr_word" title="bbox 1630 923 1833 977" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀποφαντικός,</ins>
           </span>
         </span>
       </span>
@@ -1439,7 +1439,7 @@
             <ins class="alt" title="nlp 2.00">τῷσόμῳ</ins>
           </span>
         </span>
-        <span id="w_269_1" class="ocr_word" title="bbox 1477 1889 1531 1914">
+        <span id="w_269_1_0" class="ocr_word" title="bbox 1477 1889 1531 1914">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">&amp;#x003C;τῶν&amp;#x003E;</ins>
           </span>
@@ -1503,16 +1503,11 @@
         </span>
         <span id="w_281" class="ocr_word" title="bbox 1661 1943 1833 1995" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συμπλη-</ins>
+            <ins title="nlp 2.00">συμπληροῦσι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 180 2009 1831 2066">
-        <span id="w_282" class="ocr_word" title="bbox 180 2024 286 2066" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ροῦσι</ins>
-          </span>
-        </span>
         <span id="w_283" class="ocr_word" title="bbox 317 2026 383 2064" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
@@ -1751,9 +1746,9 @@
             <ins class="alt" title="nlp 1.00">θεῷ</ins>
           </span>
         </span>
-        <span id="w_329" class="ocr_word" title="bbox 1215 2422 1249 2445" lang="grc">
+        <span id="w_329_0" class="ocr_word" title="bbox 1215 2422 1249 2445">
           <span class="alternatives">
-            <ins title="nlp 2.00">ς&amp;#x772;.</ins>
+            <ins class="alt" title="nlp 2.00">ς&amp;#x772;.</ins>
           </span>
         </span>
       </span>
@@ -1804,9 +1799,14 @@
             <ins class="alt" title="nlp 2.00">δηλῶν</ins>
           </span>
         </span>
-        <span id="w_337_1" class="ocr_word" title="bbox 1365 2531 1411 2571">
+        <span id="w_337_1_0" class="ocr_word" title="bbox 1365 2531 1411 2571">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἤ</ins>
+            <ins class="alt" title="nlp 2.00">ἢ</ins>
+          </span>
+        </span>
+        <span id="w_337_1_1" class="ocr_word" title="bbox 1365 2531 1411 2571">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_338" class="ocr_word" title="bbox 1444 2542 1596 2585" lang="grc">
@@ -1817,11 +1817,6 @@
         <span id="w_339" class="ocr_word" title="bbox 1633 2546 1657 2583" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_340" class="ocr_word" title="bbox 1735 2543 1831 2570" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">συνδέσμῳ</ins>
           </span>
         </span>
       </span>
