--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0597.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0597.html
@@ -10,9 +10,9 @@
   <body>
     <div class="ocr_page" id="i0597.png">
       <span class="ocr_line" title="bbox 763 921 1285 970">
-        <span id="w_8" class="ocr_word" title="bbox 1245 921 1285 970">
+        <span id="w_8_0" class="ocr_word" title="bbox 1245 921 1285 970">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">PRAEFATI0</ins>
+            <ins class="alt" title="nlp 2.00">PRAEFATIO</ins>
           </span>
         </span>
       </span>
@@ -96,15 +96,14 @@
             <ins title="nlp 2.00">Bonnae</ins>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 1331 1190 1794 1247">
+        <span id="w_23_0" class="ocr_word" title="bbox 1331 1190 1794 1247">
           <span class="alternatives">
-            <ins title="nlp 2.00">ClOIOCCCLXXX),</ins>
+            <ins class="alt" title="nlp 2.00">CIϽIϽCCCLXXX),</ins>
           </span>
         </span>
-        <span id="w_24" class="ocr_word" title="bbox 1834 1204 1927 1232">
+        <span id="w_23_1" class="ocr_word" title="bbox 1331 1190 1794 1247">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cum</ins>
-            <del title="nlp 0.90">cum</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -212,9 +211,14 @@
             <ins title="nlp 2.00">Α.</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 307 1435 458 1476">
+        <span id="w_43_0" class="ocr_word" title="bbox 307 1435 458 1476">
           <span class="alternatives">
-            <ins title="nlp 2.00">müller</ins>
+            <ins class="alt" title="nlp 2.00">Müller</ins>
+          </span>
+        </span>
+        <span id="w_43_1" class="ocr_word" title="bbox 307 1435 458 1476">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 504 1433 586 1474">
@@ -272,11 +276,6 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_54" class="ocr_word" title="bbox 1863 1429 1928 1470">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">14.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 122 1509 1927 1568">
         <span id="w_55" class="ocr_word" title="bbox 122 1515 287 1557">
@@ -290,9 +289,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 387 1514 406 1554">
+        <span id="w_57_0" class="ocr_word" title="bbox 387 1514 406 1554">
           <span class="alternatives">
-            <ins title="nlp 2.00">74)</ins>
+            <ins class="alt" title="nlp 2.00">7</ins>
+          </span>
+        </span>
+        <span id="w_57_1" class="ocr_word" title="bbox 387 1514 406 1554">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">4)</ins>
           </span>
         </span>
         <span id="w_59" class="ocr_word" title="bbox 482 1513 787 1566">
@@ -388,9 +392,14 @@
             <ins class="alt" title="nlp 2.00">Caelo</ins>
           </span>
         </span>
-        <span id="w_74_0" class="ocr_word" title="bbox 865 1590 1247 1646">
+        <span id="w_74_0_0" class="ocr_word" title="bbox 865 1590 1247 1646">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Brandisii</ins>
+            <ins class="alt" title="nlp 2.00">(Brandissi</ins>
+          </span>
+        </span>
+        <span id="w_74_0_1" class="ocr_word" title="bbox 865 1590 1247 1646">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_74_1" class="ocr_word" title="bbox 865 1590 1247 1646">
@@ -417,12 +426,6 @@
         <span id="w_81" class="ocr_word" title="bbox 1742 1587 1787 1643" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">1.);</ins>
-          </span>
-        </span>
-        <span id="w_82" class="ocr_word" title="bbox 1827 1588 1926 1629">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">item</ins>
-            <del title="nlp 0.90">item</del>
           </span>
         </span>
       </span>
@@ -582,9 +585,14 @@
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_111" class="ocr_word" title="bbox 647 1847 666 1871" lang="grc">
+        <span id="w_111_0" class="ocr_word" title="bbox 647 1847 666 1871">
           <span class="alternatives">
-            <ins title="nlp 2.00">ε&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ε&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_111_1" class="ocr_word" title="bbox 647 1847 666 1871">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_112" class="ocr_word" title="bbox 703 1846 834 1885" lang="grc">
@@ -612,14 +620,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_117" class="ocr_word" title="bbox 1750 1827 1769 1866" lang="grc">
+        <span id="w_117_0" class="ocr_word" title="bbox 1750 1827 1769 1866">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_118" class="ocr_word" title="bbox 1811 1841 1928 1878" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δα&amp;#x772;δης</ins>
+            <ins class="alt" title="nlp 2.00">ὁ</ins>
           </span>
         </span>
       </span>
@@ -655,9 +658,14 @@
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_125" class="ocr_word" title="bbox 759 1913 777 1949" lang="grc">
+        <span id="w_125_0" class="ocr_word" title="bbox 759 1913 777 1949">
           <span class="alternatives">
-            <ins title="nlp 2.00">ι&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ῑ</ins>
+          </span>
+        </span>
+        <span id="w_125_1" class="ocr_word" title="bbox 759 1913 777 1949">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_126" class="ocr_word" title="bbox 808 1925 1034 1964" lang="grc">
@@ -665,9 +673,14 @@
             <ins class="alt" title="nlp 1.00">κατηγορίας</ins>
           </span>
         </span>
-        <span id="w_127" class="ocr_word" title="bbox 1070 1925 1188 1964" lang="grc">
+        <span id="w_127_0" class="ocr_word" title="bbox 1070 1925 1188 1964">
           <span class="alternatives">
-            <ins title="nlp 2.00">δα&amp;#x772;δης</ins>
+            <ins class="alt" title="nlp 2.00">δᾱδης</ins>
+          </span>
+        </span>
+        <span id="w_127_1" class="ocr_word" title="bbox 1070 1925 1188 1964">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_128" class="ocr_word" title="bbox 1220 1925 1450 1964" lang="grc">
@@ -678,16 +691,6 @@
         <span id="w_129" class="ocr_word" title="bbox 1490 1909 1702 1950" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">σιμπλίκος</ins>
-          </span>
-        </span>
-        <span id="w_130" class="ocr_word" title="bbox 1734 1905 1794 1945" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_131" class="ocr_word" title="bbox 1826 1906 1929 1959" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">φιλόπονος:</ins>
           </span>
         </span>
       </span>
@@ -717,9 +720,14 @@
             <ins title="nlp 2.00">ἑρμηνείας,</ins>
           </span>
         </span>
-        <span id="w_138" class="ocr_word" title="bbox 1067 1990 1298 2044" lang="grc">
+        <span id="w_138_0" class="ocr_word" title="bbox 1067 1990 1298 2044">
           <span class="alternatives">
-            <ins title="nlp 2.00">μαγεντηνὸς</ins>
+            <ins class="alt" title="nlp 2.00">ἀμμώνιος,</ins>
+          </span>
+        </span>
+        <span id="w_138_1" class="ocr_word" title="bbox 1067 1990 1298 2044">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">μαγεντηνὸς</ins>
           </span>
         </span>
         <span id="w_139" class="ocr_word" title="bbox 1328 2005 1390 2030" lang="grc">
@@ -742,14 +750,14 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_143" class="ocr_word" title="bbox 1782 1993 1804 2037">
+        <span id="w_143_0" class="ocr_word" title="bbox 1782 1993 1804 2037">
           <span class="alternatives">
-            <ins title="nlp 2.00">γ&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">γ&amp;#x772;</ins>
           </span>
         </span>
-        <span id="w_144" class="ocr_word" title="bbox 1835 1998 1929 2038" lang="grc">
+        <span id="w_143_1" class="ocr_word" title="bbox 1782 1993 1804 2037">
           <span class="alternatives">
-            <ins title="nlp 2.00">σχήματα</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1203,9 +1211,14 @@
             <ins class="alt" title="nlp 1.00">φθορᾶς</ins>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 1406 2627 1629 2679" lang="grc">
+        <span id="w_235_0" class="ocr_word" title="bbox 1406 2627 1629 2679">
           <span class="alternatives">
-            <ins title="nlp 2.00">ξιλόπονος:</ins>
+            <ins class="alt" title="nlp 2.00">φιλόπονος:</ins>
+          </span>
+        </span>
+        <span id="w_235_1" class="ocr_word" title="bbox 1406 2627 1629 2679">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_236" class="ocr_word" title="bbox 1676 2637 1729 2662" lang="grc">
@@ -1216,11 +1229,6 @@
         <span id="w_237" class="ocr_word" title="bbox 1766 2637 1807 2660" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_238" class="ocr_word" title="bbox 1845 2635 1929 2674" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περὶ</ins>
           </span>
         </span>
       </span>
@@ -1513,16 +1521,21 @@
             <ins title="nlp 2.00">denique</ins>
           </span>
         </span>
-        <span id="w_296" class="ocr_word" title="bbox 1774 3017 1929 3071">
+        <span id="w_296_0" class="ocr_word" title="bbox 1774 3017 1929 3071">
           <span class="alternatives">
-            <ins title="nlp 2.00">AnalyHune</ins>
+            <ins class="alt" title="nlp 2.00">Analy-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 274 3177 1783 3227">
-        <span id="w_297" class="ocr_word" title="bbox 274 3185 371 3217">
+        <span id="w_297_0" class="ocr_word" title="bbox 274 3185 371 3217">
           <span class="alternatives">
-            <ins title="nlp 2.00">locum</ins>
+            <ins class="alt" title="nlp 2.00">Hunc</ins>
+          </span>
+        </span>
+        <span id="w_297_1" class="ocr_word" title="bbox 274 3185 371 3217">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">locum</ins>
           </span>
         </span>
         <span id="w_298" class="ocr_word" title="bbox 398 3185 508 3218">
