--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0536.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0536.html
@@ -1621,7 +1621,7 @@
         </span>
         <span id="w_315" class="ocr_word" title="bbox 2077 1791 2158 1828">
           <span class="alternatives">
-            <ins title="nlp 2.00">201ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1740,7 +1740,7 @@
         </span>
         <span id="w_339" class="ocr_word" title="bbox 1783 1927 1890 1981" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὔτε</ins>
+            <ins title="nlp 2.00">(οὔτε</ins>
           </span>
         </span>
         <span id="w_340" class="ocr_word" title="bbox 1922 1928 1993 1981" lang="grc">
@@ -1812,16 +1812,11 @@
         </span>
         <span id="w_353" class="ocr_word" title="bbox 2017 2012 2095 2036" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπι-</ins>
+            <ins title="nlp 2.00">ἐπιδέχεται.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 407 2066 2094 2125">
-        <span id="w_354" class="ocr_word" title="bbox 407 2086 575 2125" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δέχεται.</ins>
-          </span>
-        </span>
         <span id="w_355" class="ocr_word" title="bbox 613 2087 655 2111" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
@@ -2045,7 +2040,7 @@
         </span>
         <span id="w_398" class="ocr_word" title="bbox 1282 2275 1458 2328" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δύναται</ins>
+            <ins title="nlp 2.00">(δύναται</ins>
           </span>
         </span>
         <span id="w_399" class="ocr_word" title="bbox 1480 2274 1552 2329" lang="grc">
@@ -2137,16 +2132,11 @@
         </span>
         <span id="w_416" class="ocr_word" title="bbox 1979 2358 2094 2396" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατη-</ins>
+            <ins title="nlp 2.00">κατηγορεῖται</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 406 2413 2093 2471">
-        <span id="w_417" class="ocr_word" title="bbox 406 2419 574 2471" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γορεῖται</ins>
-          </span>
-        </span>
         <span id="w_418" class="ocr_word" title="bbox 604 2433 646 2457" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
@@ -2267,13 +2257,8 @@
         </span>
         <span id="w_441" class="ocr_word" title="bbox 1749 2597 1776 2630">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
+            <ins class="alt" title="nlp 2.00">T:</ins>
             <del title="nlp 0.90">T</del>
-          </span>
-        </span>
-        <span id="w_442" class="ocr_word" title="bbox 1788 2609 1795 2629">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
           </span>
         </span>
         <span id="w_443" class="ocr_word" title="bbox 1822 2599 1895 2633" lang="grc">
@@ -2305,12 +2290,7 @@
         </span>
         <span id="w_448" class="ocr_word" title="bbox 547 2659 673 2704">
           <span class="alternatives">
-            <ins title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_449" class="ocr_word" title="bbox 683 2674 690 2693">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_450" class="ocr_word" title="bbox 717 2671 793 2693" lang="grc">
