--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0676.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0676.html
@@ -17,8 +17,7 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 768 81 993 115">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">STEPIIANI</ins>
-            <del title="nlp 0.90">STEPIIANI</del>
+            <ins title="nlp 2.00">STEPHANI</ins>
           </span>
         </span>
         <span id="w_2" class="ocr_word" title="bbox 1024 81 1066 114">
@@ -41,8 +40,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1244 81 1677 115">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">LNTERPUETATIONE</ins>
-            <del title="nlp 0.90">LNTERPUETATIONE</del>
+            <ins title="nlp 2.00">INTERPRETATIONE</ins>
           </span>
         </span>
       </span>
@@ -218,12 +216,17 @@
       <span class="ocr_line" title="bbox 340 836 2057 892">
         <span id="w_37" class="ocr_word" title="bbox 340 836 515 892" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">5 Ὁμοῦ</ins>
+            <ins title="nlp 2.00">Ὁμοῦ</ins>
           </span>
         </span>
-        <span id="w_38" class="ocr_word" title="bbox 547 854 639 892" lang="grc">
+        <span id="w_38_0" class="ocr_word" title="bbox 547 854 639 892">
           <span class="alternatives">
-            <ins title="nlp 2.00">σπη &amp;#x772; .</ins>
+            <ins class="alt" title="nlp 2.00">σ&amp;#x772;π&amp;#x772;η&amp;#x772;.</ins>
+          </span>
+        </span>
+        <span id="w_38_1" class="ocr_word" title="bbox 547 854 639 892">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_39" class="ocr_word" title="bbox 682 840 816 882" lang="grc">
@@ -231,28 +234,23 @@
             <ins class="alt" title="nlp 1.00">τέλος</ins>
           </span>
         </span>
-        <span id="w_40" class="ocr_word" title="bbox 846 852 923 877" lang="grc">
+        <span id="w_40_0" class="ocr_word" title="bbox 846 852 923 877">
           <span class="alternatives">
-            <ins title="nlp 2.00">γ &amp;#x772; τμήματος τῶν  ἐκ τρίτου</ins>
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
+          </span>
+        </span>
+        <span id="w_40_1" class="ocr_word" title="bbox 846 852 923 877">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">γ&amp;#x772;</ins>
           </span>
         </span>
         <span id="w_41" class="ocr_word" title="bbox 1624 849 1897 889" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προτάσεων</ins>
-          </span>
-        </span>
-        <span id="w_42" class="ocr_word" title="bbox 1926 848 2057 890" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προσ-</ins>
+            <ins title="nlp 2.00">τμήματος τῶν ἐκ τρίτου προτάσεων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 600 905 1838 961">
-        <span id="w_43" class="ocr_word" title="bbox 600 922 863 961" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατηγορουμένου,</ins>
-          </span>
-        </span>
         <span id="w_44" class="ocr_word" title="bbox 1078 905 1390 960" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καταφάσεων</ins>
@@ -760,9 +758,14 @@
             <ins title="nlp 2.00">κτλ.</ins>
           </span>
         </span>
-        <span id="w_136" class="ocr_word" title="bbox 2051 2707 2131 2736">
+        <span id="w_136_0" class="ocr_word" title="bbox 2051 2707 2131 2736">
           <span class="alternatives">
-            <ins title="nlp 2.00">f-85r</ins>
+            <ins class="alt" title="nlp 2.00">f.</ins>
+          </span>
+        </span>
+        <span id="w_136_1" class="ocr_word" title="bbox 2051 2707 2131 2736">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">85r</ins>
           </span>
         </span>
       </span>
