--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0677.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0677.html
@@ -12,8 +12,7 @@
       <span class="ocr_line" title="bbox 620 116 1962 167">
         <span id="w_0" class="ocr_word" title="bbox 620 116 845 151">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">STEPIIANI</ins>
-            <del title="nlp 0.90">STEPIIANI</del>
+            <ins title="nlp 2.00">STEPHANI</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 872 120 916 152">
@@ -35,8 +34,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 1095 123 1521 159">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’TATIONE</ins>
-            <del title="nlp 0.90">’TATIONE</del>
+            <ins title="nlp 2.00">INTERPRETATIONE</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1910 127 1962 167">
@@ -231,7 +229,7 @@
       <span class="ocr_line" title="bbox 192 596 1835 649">
         <span id="w_37" class="ocr_word" title="bbox 192 606 210 636" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">5 πᾶς ἄνθρωπος</ins>
+            <ins title="nlp 2.00">πᾶς ἄνθρωπος</ins>
           </span>
         </span>
         <span id="w_38_0" class="ocr_word" title="bbox 920 622 972 625">
@@ -351,7 +349,7 @@
       <span class="ocr_line" title="bbox 171 1344 1888 1403">
         <span id="w_57" class="ocr_word" title="bbox 171 1360 209 1390" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">10 Ἀόριστος</ins>
+            <ins title="nlp 2.00">Ἀόριστος</ins>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 502 1362 803 1401" lang="grc">
@@ -742,9 +740,14 @@
             <del title="nlp 0.90">v.</del>
           </span>
         </span>
-        <span id="w_129" class="ocr_word" title="bbox 1014 3163 1136 3207">
+        <span id="w_129_0" class="ocr_word" title="bbox 1014 3163 1136 3207">
           <span class="alternatives">
-            <ins title="nlp 2.00">19sqq.</ins>
+            <ins class="alt" title="nlp 2.00">19</ins>
+          </span>
+        </span>
+        <span id="w_129_1" class="ocr_word" title="bbox 1014 3163 1136 3207">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">sqq.</ins>
           </span>
         </span>
         <span id="w_130" class="ocr_word" title="bbox 1284 3162 1322 3195">
@@ -762,15 +765,14 @@
             <ins title="nlp 2.00">scripi:</ins>
           </span>
         </span>
-        <span id="w_133" class="ocr_word" title="bbox 1609 3162 1675 3205" lang="grc">
+        <span id="w_133_0" class="ocr_word" title="bbox 1609 3162 1675 3205">
           <span class="alternatives">
-            <ins title="nlp 2.00">ρμη &amp;#x772; </ins>
+            <ins class="alt" title="nlp 2.00">ρ&amp;#x772;μ&amp;#x772;η&amp;#x772;</ins>
           </span>
         </span>
-        <span id="w_134" class="ocr_word" title="bbox 1701 3161 1725 3194">
+        <span id="w_133_1" class="ocr_word" title="bbox 1609 3162 1675 3205">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P</ins>
-            <del title="nlp 0.90">P</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
