--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0679.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0679.html
@@ -12,8 +12,7 @@
       <span class="ocr_line" title="bbox 586 118 1924 159">
         <span id="w_0" class="ocr_word" title="bbox 586 118 808 152">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">STEPHANi</ins>
-            <del title="nlp 0.90">STEPHANi</del>
+            <ins title="nlp 2.00">STEPHANI</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 839 119 882 152">
@@ -36,8 +35,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 1058 120 1482 154">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">INTKRPKKTATIONE</ins>
-            <del title="nlp 0.90">INTKRPKKTATIONE</del>
+            <ins title="nlp 2.00">INTERPRETATIONE</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1875 119 1924 159">
@@ -62,14 +60,14 @@
             <ins class="alt" title="nlp 1.00">ὑποκείμενος</ins>
           </span>
         </span>
-        <span id="w_9" class="ocr_word" title="bbox 1113 267 1400 322" lang="grc">
+        <span id="w_9_0" class="ocr_word" title="bbox 1113 267 1400 322">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; ὡρισμένος &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὡρισμένος&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_10" class="ocr_word" title="bbox 1431 281 1853 322" lang="grc">
+        <span id="w_9_1" class="ocr_word" title="bbox 1113 267 1400 322">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατηγορούμενος.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -332,14 +330,14 @@
             <ins class="alt" title="nlp 1.00">ἐκ</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 1226 1417 1248 1453">
+        <span id="w_57_0" class="ocr_word" title="bbox 1226 1417 1248 1453">
           <span class="alternatives">
-            <ins title="nlp 2.00">γ &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">γ&amp;#x772;</ins>
           </span>
         </span>
-        <span id="w_58" class="ocr_word" title="bbox 1278 1414 1831 1455" lang="grc">
+        <span id="w_57_1" class="ocr_word" title="bbox 1226 1417 1248 1453">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προσκατηγορουμένου.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -472,7 +470,7 @@
       <span class="ocr_line" title="bbox 145 1746 1847 1799">
         <span id="w_82" class="ocr_word" title="bbox 145 1761 183 1790" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">15 τὶς ἄνθρωπος</ins>
+            <ins title="nlp 2.00">τὶς ἄνθρωπος</ins>
           </span>
         </span>
         <span id="w_83_0" class="ocr_word" title="bbox 817 1766 871 1770">
@@ -687,41 +685,36 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_120" class="ocr_word" title="bbox 1635 2536 1830 2574" lang="grc">
+        <span id="w_120_0" class="ocr_word" title="bbox 1635 2536 1830 2574">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατηγο –</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορούμενον</ins>
           </span>
         </span>
-        <span id="w_121" class="ocr_word" title="bbox 1862 2529 1941 2557">
+        <span id="w_120_1" class="ocr_word" title="bbox 1635 2536 1830 2574">
           <span class="alternatives">
-            <ins title="nlp 2.00">f.87r</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 409 2596 1673 2650">
-        <span id="w_122" class="ocr_word" title="bbox 409 2611 638 2650" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ρούμενον</ins>
-          </span>
-        </span>
         <span id="w_123" class="ocr_word" title="bbox 675 2596 750 2636" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_124" class="ocr_word" title="bbox 780 2611 802 2648">
+        <span id="w_124_0" class="ocr_word" title="bbox 780 2611 802 2648">
           <span class="alternatives">
-            <ins title="nlp 2.00">γ &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">γ&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_124_1" class="ocr_word" title="bbox 780 2611 802 2648">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_125" class="ocr_word" title="bbox 832 2608 1364 2648" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προσκατηγορούμενον</ins>
-          </span>
-        </span>
-        <span id="w_126" class="ocr_word" title="bbox 1398 2605 1673 2646" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὡρισμένον.</ins>
           </span>
         </span>
       </span>
@@ -795,14 +788,24 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 144 2871 1315 2926">
-        <span id="w_140" class="ocr_word" title="bbox 144 2884 185 2915" lang="grc">
+        <span id="w_140_0" class="ocr_word" title="bbox 144 2884 185 2915">
           <span class="alternatives">
-            <ins title="nlp 2.00">25 οὐκ ἄνθρωπος</ins>
+            <ins class="alt" title="nlp 2.00">25</ins>
           </span>
         </span>
-        <span id="w_141" class="ocr_word" title="bbox 633 2892 685 2897">
+        <span id="w_140_1" class="ocr_word" title="bbox 144 2884 185 2915">
           <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
+            <ins class="alt" title="nlp 2.00">οὐκ</ins>
+          </span>
+        </span>
+        <span id="w_141_0" class="ocr_word" title="bbox 633 2892 685 2897">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἄνθρωπος</ins>
+          </span>
+        </span>
+        <span id="w_141_1" class="ocr_word" title="bbox 633 2892 685 2897">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_142" class="ocr_word" title="bbox 858 2892 911 2895">
@@ -924,8 +927,7 @@
         </span>
         <span id="w_162" class="ocr_word" title="bbox 699 3164 880 3198">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dicenduui</ins>
-            <del title="nlp 0.90">dicenduui</del>
+            <ins title="nlp 2.00">dicendum</ins>
           </span>
         </span>
         <span id="w_163" class="ocr_word" title="bbox 908 3166 979 3196">
