--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0537.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0537.html
@@ -1550,16 +1550,21 @@
             <ins class="alt" title="nlp 1.00">ὁμοίοις</ins>
           </span>
         </span>
-        <span id="w_301" class="ocr_word" title="bbox 1750 2267 1884 2294" lang="grc">
+        <span id="w_301_0" class="ocr_word" title="bbox 1750 2267 1884 2294">
           <span class="alternatives">
-            <ins title="nlp 2.00">οὐσιωκοινῆς</ins>
+            <ins class="alt" title="nlp 2.00">οὐσιω-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 140 2480 1839 2536">
-        <span id="w_302" class="ocr_word" title="bbox 140 2494 155 2526">
+        <span id="w_302_0" class="ocr_word" title="bbox 140 2494 155 2526">
           <span class="alternatives">
-            <ins title="nlp 2.00">1</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_302_1" class="ocr_word" title="bbox 140 2494 155 2526">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κοινῆς</ins>
           </span>
         </span>
         <span id="w_304" class="ocr_word" title="bbox 320 2491 353 2524">
